<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Residual</string>
    <string name="action_settings">Settings</string>
    <string name="title_standard">Standard</string>
    <string name="preparation_label">Preparation</string>
    <string name="working_time_label">Working Time</string>
    <string name="distance_label">Distance</string>
    <string name="one_way_journey_time_label">One Way Journey Time</string>
    <string name="days_label">Days at Customer Site</string>
    <string name="residual_label">Residual</string>
    <string name="nominal_fee_label">Nominal Fee</string>
    <string name="total_amount_label">Total Amount</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="km">km</string>
    <string name="euro">&#8364;</string>

</resources>
